--- a/staticfiles/css/acss/acss_dark.css
+++ b/staticfiles/css/acss/acss_dark.css
@@ -2,12 +2,13 @@
 
 body{
     color:white!important;
-    background-color: black!important;
+    background-color: #121212!important;
 }
 
 
 .bg-light{
      background-color: #34282C!important;
+     background-color: #222222!important;
 }
 
 .color-white{
@@ -42,4 +43,15 @@ body{
 }
 .color-bg-t{
 	
+}
+.color-bg-dark-white{
+    background-color: white;
+}
+
+.color-bg-dark-white{
+    background-color:black;
+}
+
+.border{
+    border-color: black!important;
 }
