--- a/template/base.html
+++ b/template/base.html
@@ -17,13 +17,44 @@
 	 <link rel='stylesheet' href="{%static 'css/acss/acss.css'%}">
 
 </head>
+<style>
+:root{
+	--primary-color:blue;
+	--secondary-color:black;
+}
+</style>
 <body>
+<div class="container">
+
+<div class="navbar">
+	<div class="navbar-brand">AudioFlix</div>
+	<div class="navbar-brand"></div>
+</div>
+<div class="row sz-24 bold">
+<div class="col-2">
+	<br />
+	<div class="row my-2">
+		<div class="col"><a class="no-decoration" href="{%url 'HomeUrl'%}">Home</a> </div>
+	</div>
+	<div class="row my-2">
+		<div class="col">Explore</div>
+	</div>
+	<div class="row my-2">
+		<div class="col">Library</div>
+	</div>
+	<div class="row my-2">
+		<div class="col">Search</div>
+	</div>
+</div>
 {%block content%}
-<div class="container" id="main">
+<div class="col" id="main">
 
 
 </div>
 {%endblock%}
+</div>
+</div>
+
 {%static 'js/src' as path%}
 <script type="text/babel" src="{%static 'js/src/main.js'%}"></script>
 <script type="text/babel" src="{{path}}/{%block src%}{%endblock%}"></script>
